--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,38 +1,4 @@
-/* Layout */
-.container {
-  display: flex;
-  height: 100vh;
-  font-family: sans-serif;
-}
-.sidebar {
-  width: 200px;
-  background: #f5f5f5;
-  padding: 1em;
-  box-sizing: border-box;
-}
-.sidebar ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-.sidebar li {
-  margin: 0.5em 0;
-}
-.sidebar li.active a {
-  font-weight: bold;
-  color: #007acc;
-}
-.sidebar a {
-  text-decoration: none;
-  color: inherit;
-  cursor: pointer;
-}
-.main-content {
-  flex: 1;
-  padding: 1em;
-  box-sizing: border-box;
-  overflow-y: auto;
-}
+/* Layout styles moved to OuterWrapper.vue and TwoColumnLayout.vue components */
 
 /* Core wrappers & controls */
 .core-outer {
